modules/gdscript/tests/scripts/analyzer/errors/abstract_class_instantiate.gd
class A extends InstancePlaceholder:
	func _init():
		print('no')

class B extends A:
	pass

func test():
	InstancePlaceholder.new()
	B.new()
